Enhance Layout and Header Responsiveness with CSS Adjustments. Updated button text for mobile and desktop views, refined spacing in header elements, and improved layout for the full-width hero card to ensure better visual consistency across devices.

--- a/examples/kit-nextjs-skate-park/src/assets/base/base.css
+++ b/examples/kit-nextjs-skate-park/src/assets/base/base.css
@@ -60,7 +60,8 @@ a {
   @apply text-text-red underline text-[1em] hover:text-text-basic-active;
 }
 table {
-  @apply h-auto! border-2 border-solid border-border-gray;
+  @apply border-2 border-solid border-border-gray;
+  height: auto !important;
   &,
   tr,
   th,
