--- a/examples/kit-nextjs-skate-park/src/assets/components/image.css
+++ b/examples/kit-nextjs-skate-park/src/assets/components/image.css
@@ -15,6 +15,7 @@
 
 .image-default-size {
   img {
-    @apply max-w-none w-auto!;
+    @apply max-w-none;
+    width: auto !important;
   }
 }
