--- a/examples/kit-nextjs-skate-park/src/assets/components/promo.css
+++ b/examples/kit-nextjs-skate-park/src/assets/components/promo.css
@@ -102,7 +102,7 @@
 /* promoted box */
 
 .promoted-box {
-  @apply border-0!;
+  border: 0 !important;
 }
 
 /* promo */
